{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 145,
  "lineage": "3c5395f1-93b0-d15e-2729-0f674cf42d86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:loadbalancer/app/bsg-payment-alb/748fd35ea648503a",
            "arn_suffix": "app/bsg-payment-alb/748fd35ea648503a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bsg-payment-alb-37069891.af-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:af-south-1:009160066839:loadbalancer/app/bsg-payment-alb/748fd35ea648503a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bsg-payment-alb",
            "preserve_host_header": false,
            "region": "af-south-1",
            "security_groups": [
              "sg-0e823846983610f65"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0651ddefe983c68ef"
              },
              {
                "subnet_id": "subnet-0dc6b40241dbd0a6c"
              }
            ],
            "subnets": [
              "subnet-0651ddefe983c68ef",
              "subnet-0dc6b40241dbd0a6c"
            ],
            "vpc_id": "vpc-0b3ab6ac834e3edb8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z268VQBMOI5EKX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:loadbalancer/app/bsg-payment-alb/748fd35ea648503a"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:listener/app/bsg-payment-alb/748fd35ea648503a/01fabe5dde5f73fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:targetgroup/bsg-payment-tg/9562b3eb998c8b0c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:009160066839:listener/app/bsg-payment-alb/748fd35ea648503a/01fabe5dde5f73fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:loadbalancer/app/bsg-payment-alb/748fd35ea648503a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "af-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:listener/app/bsg-payment-alb/748fd35ea648503a/01fabe5dde5f73fb"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.payment_tg",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "payment_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:targetgroup/bsg-payment-tg/9562b3eb998c8b0c",
            "arn_suffix": "targetgroup/bsg-payment-tg/9562b3eb998c8b0c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:af-south-1:009160066839:targetgroup/bsg-payment-tg/9562b3eb998c8b0c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:af-south-1:009160066839:loadbalancer/app/bsg-payment-alb/748fd35ea648503a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bsg-payment-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "af-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:009160066839:targetgroup/bsg-payment-tg/9562b3eb998c8b0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:security-group/sg-0e823846983610f65",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e823846983610f65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bsg-payment-alb-sg",
            "name_prefix": "",
            "owner_id": "009160066839",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009160066839",
            "id": "sg-0e823846983610f65",
            "region": "af-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:security-group/sg-04f6d6e05f78d5eaa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f6d6e05f78d5eaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow internal access to geth",
                "from_port": 8545,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8545
              },
              {
                "cidr_blocks": [],
                "description": "allow ALB to payment task",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e823846983610f65"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bsg-payment-ecs-sg",
            "name_prefix": "",
            "owner_id": "009160066839",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009160066839",
            "id": "sg-04f6d6e05f78d5eaa",
            "region": "af-south-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:network-acl/acl-089a7e1c7bd9e17a8",
            "default_network_acl_id": "acl-089a7e1c7bd9e17a8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-089a7e1c7bd9e17a8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "009160066839",
            "region": "af-south-1",
            "subnet_ids": [
              "subnet-0651ddefe983c68ef",
              "subnet-0780d534e39f1c279",
              "subnet-0dc6b40241dbd0a6c",
              "subnet-0e58f814d0c0c1619"
            ],
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-default",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-default",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:route-table/rtb-020f4bd0d5f5f946f",
            "default_route_table_id": "rtb-020f4bd0d5f5f946f",
            "id": "rtb-020f4bd0d5f5f946f",
            "owner_id": "009160066839",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [],
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-default",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-default",
              "Project": "bsg-payment"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:security-group/sg-056621d752e673139",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-056621d752e673139",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "009160066839",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-default",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-default",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56d98640a0ce304",
            "arn": "arn:aws:ec2:af-south-1:009160066839:elastic-ip/eipalloc-0f56d98640a0ce304",
            "association_id": "eipassoc-0ff2277fae4725ac3",
            "domain": "vpc",
            "id": "eipalloc-0f56d98640a0ce304",
            "network_border_group": "af-south-1",
            "network_interface": "eni-0dd7d7b3c6167555b",
            "private_dns": "ip-10-0-1-254.af-south-1.compute.internal",
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-13-247-236-228.af-south-1.compute.amazonaws.com",
            "public_ip": "13.247.236.228",
            "public_ipv4_pool": "amazon",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-af-south-1a",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-af-south-1a",
              "Project": "bsg-payment"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:internet-gateway/igw-0840edce384303ef6",
            "id": "igw-0840edce384303ef6",
            "owner_id": "009160066839",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f56d98640a0ce304",
            "association_id": "eipassoc-0ff2277fae4725ac3",
            "connectivity_type": "public",
            "id": "nat-024e656c2f26cbd59",
            "network_interface_id": "eni-0dd7d7b3c6167555b",
            "private_ip": "10.0.1.254",
            "public_ip": "13.247.236.228",
            "region": "af-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0651ddefe983c68ef",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-af-south-1a",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-af-south-1a",
              "Project": "bsg-payment"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e50b22f59f340f261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-024e656c2f26cbd59",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "af-south-1",
            "route_table_id": "rtb-0e50b22f59f340f26",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0840edce384303ef6",
            "id": "r-rtb-07e42ca52beee9f111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "af-south-1",
            "route_table_id": "rtb-07e42ca52beee9f11",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:route-table/rtb-0e50b22f59f340f26",
            "id": "rtb-0e50b22f59f340f26",
            "owner_id": "009160066839",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-024e656c2f26cbd59",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-private",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-private",
              "Project": "bsg-payment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:route-table/rtb-07e42ca52beee9f11",
            "id": "rtb-07e42ca52beee9f11",
            "owner_id": "009160066839",
            "propagating_vgws": [],
            "region": "af-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0840edce384303ef6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-public",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-public",
              "Project": "bsg-payment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e352000e3c17539e",
            "region": "af-south-1",
            "route_table_id": "rtb-0e50b22f59f340f26",
            "subnet_id": "subnet-0e58f814d0c0c1619"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb0076aedeee3801",
            "region": "af-south-1",
            "route_table_id": "rtb-0e50b22f59f340f26",
            "subnet_id": "subnet-0780d534e39f1c279"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09531d8656f15730f",
            "region": "af-south-1",
            "route_table_id": "rtb-07e42ca52beee9f11",
            "subnet_id": "subnet-0651ddefe983c68ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03338cf3e53e52fc1",
            "region": "af-south-1",
            "route_table_id": "rtb-07e42ca52beee9f11",
            "subnet_id": "subnet-0dc6b40241dbd0a6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:subnet/subnet-0e58f814d0c0c1619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e58f814d0c0c1619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160066839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-private-af-south-1a",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-private-af-south-1a",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:subnet/subnet-0780d534e39f1c279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0780d534e39f1c279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160066839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-private-af-south-1b",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-private-af-south-1b",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:subnet/subnet-0651ddefe983c68ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0651ddefe983c68ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160066839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-public-af-south-1a",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-public-af-south-1a",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:subnet/subnet-0dc6b40241dbd0a6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc6b40241dbd0a6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160066839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc-public-af-south-1b",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc-public-af-south-1b",
              "Project": "bsg-payment"
            },
            "vpc_id": "vpc-0b3ab6ac834e3edb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:009160066839:vpc/vpc-0b3ab6ac834e3edb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089a7e1c7bd9e17a8",
            "default_route_table_id": "rtb-020f4bd0d5f5f946f",
            "default_security_group_id": "sg-056621d752e673139",
            "dhcp_options_id": "dopt-0a7eb0ba3878208d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b3ab6ac834e3edb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020f4bd0d5f5f946f",
            "owner_id": "009160066839",
            "region": "af-south-1",
            "tags": {
              "Name": "bsg-payment-sandbox-vpc",
              "Project": "bsg-payment"
            },
            "tags_all": {
              "Name": "bsg-payment-sandbox-vpc",
              "Project": "bsg-payment"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}